Issue #31 - Modal Box
Better looking Modal Box.
Still need to close the box when clicked outside

--- a/builder/index.html
+++ b/builder/index.html
@@ -92,58 +92,63 @@
   <!-- ko if: myTeamDisplayed -->
   <!-- ko with: team -->
   <div class="modal-box" data-bind="visible: isTeamCodeVisible">
-    <div class="modal-close" data-bind="click: hideCode"></div>
     <div class="modal-content">
-      <div class="modal-label">Unique Team Code</div>
-      <div class="input-code">
-        <label>Code</label>
-        <div class="input-with-button">
-          <input type="text" readonly class="team-code" id="team-code" data-bind="value: teamCode"></input>
-          <div class="btncopy" data-clipboard-target="#team-code">Copy</div>
+      <div class="icon-close modal-close" data-bind="click: hideCode"></div>
+      <div class="modal-frame">
+        <div class="modal-label">Unique Team Code</div>
+        <div class="input-code">
+          <label>Code</label>
+          <div class="input-with-button">
+            <input type="text" readonly class="team-code" id="team-code" data-bind="value: teamCode"></input>
+            <div class="btncopy" data-clipboard-target="#team-code">Copy</div>
+          </div>
         </div>
-      </div>
-      <div class="input-code">
-        <label>Link to Team</label>
-        <div class="input-with-button">
-          <input type="text" readonly class="team-code" id="team-code-url" data-bind="value: teamCodeUrl"></input>
-          <div class="btncopy" data-clipboard-target="#team-code-url">Copy</div>
+        <div class="input-code">
+          <label>Link to Team</label>
+          <div class="input-with-button">
+            <input type="text" readonly class="team-code" id="team-code-url" data-bind="value: teamCodeUrl"></input>
+            <div class="btncopy" data-clipboard-target="#team-code-url">Copy</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="modal-box" data-bind="visible: isLeaderCardSelectionVisible">
-    <div class="modal-close" data-bind="click: hideLeaderCardSelection"></div>
     <div class="modal-content">
-      <div class="modal-label">Select a Leader Card</div>
-      <div class="leader-cards-list">
-        <!-- ko if: !isHonoraryMemberSelected() -->
-        <!-- ko foreach: leaderCardsProviders -->
-        <div class="leader-card" data-bind="click: function() { $parent.chooseHonoraryMember($data) }">
-          <div class="leader-card-title">Honorary Member</div>
-          <div class="leader-card-text">One Supreme in your Team may be counted as the same Faction as the Leader.</div>
-          <div class="leader-card-legend">Provided by <span data-bind="text: jsonData.name"></span></div>
-        </div>
-        <!-- /ko -->
-        <!-- /ko -->
-        <div class="leader-card leader-card-disabled">
-          <div class="leader-card-title">Recruitment Blitz</div>
-          <div class="leader-card-text">Your Team has an additional 3 Levels of Minions Cards.</div>
+      <div class="icon-close modal-close" data-bind="click: hideLeaderCardSelection"></div>
+      <div class="modal-frame">
+        <div class="modal-label">Select a Leader Card</div>
+        <div class="leader-cards-list">
+          <!-- ko if: !isHonoraryMemberSelected() -->
+          <!-- ko foreach: leaderCardsProviders -->
+          <div class="leader-card" data-bind="click: function() { $parent.chooseHonoraryMember($data) }">
+            <div class="leader-card-title">Honorary Member</div>
+            <div class="leader-card-text">One Supreme in your Team may be counted as the same Faction as the Leader.</div>
+            <div class="leader-card-legend">Provided by <span data-bind="text: jsonData.name"></span></div>
+          </div>
+          <!-- /ko -->
+          <!-- /ko -->
+          <div class="leader-card leader-card-disabled">
+            <div class="leader-card-title">Recruitment Blitz</div>
+            <div class="leader-card-text">Your Team has an additional 3 Levels of Minions Cards.</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <!-- ko if: isHonoraryMembersSelectable -->
   <div class="modal-box">
-    <div class="modal-close" data-bind="click: endHonoraryMemberSelection"></div>
-    <div class="modal-content modal-content-large">
-      <div class="modal-label">Select your Honorary Member</div>
-      <div data-bind="with: $parent.supremeFilter">
-        <select data-bind="options: origins, optionsText: 'origin_label', value: selectedOrigin,"></select>
-        <select data-bind="options: roles, optionsText: 'role_label', value: selectedRole,"></select>
-      </div>
-      <div class="recruitment-list scrollable-list" data-bind="foreach: possibleHonoraryMembers">
-        <supreme-box params="supreme: $data"></supreme-box>
-      </div>
+    <div class="modal-content">
+      <div class="icon-close modal-close" data-bind="click: endHonoraryMemberSelection"></div>
+      <div class="modal-frame modal-frame-large">
+        <div class="modal-label">Select your Honorary Member</div>
+        <div data-bind="with: $parent.supremeFilter">
+          <select data-bind="options: origins, optionsText: 'origin_label', value: selectedOrigin,"></select>
+          <select data-bind="options: roles, optionsText: 'role_label', value: selectedRole,"></select>
+        </div>
+        <div class="recruitment-list scrollable-list" data-bind="foreach: possibleHonoraryMembers">
+          <supreme-box params="supreme: $data"></supreme-box>
+        </div>
       </div>
     </div>
   </div>
@@ -153,8 +158,9 @@
 
   <!-- ko if: isAboutBoxVisible -->
   <div class="modal-box">
-    <div class="modal-close" data-bind="click: hideAboutBox"></div>
-      <div class="modal-content modal-content-large">
+    <div class="modal-content">
+      <div class="icon-close modal-close" data-bind="click: hideAboutBox"></div>
+      <div class="modal-frame modal-frame-large">
         <div class="modal-label">About "Citizen Assemble !"</div>
           <h3>A Team Builder</h3>
           <div class="about-text"><em>Citizen Assemble !</em> is a Team Builder for the Miniatures Games <em>Pulp City</em>.
@@ -178,7 +184,7 @@
             <li><a href="https://fonts.google.com/specimen/Oswald" targer="_blank">Oswald</a></li>
             <li><a href="https://fonts.google.com/specimen/Bangers" targer="_blank">Bangers</a></li>
           </ul>
-        </div>
+      </div>
     </div>
   </div>
   <!-- /ko -->
