--- a/builder/index.html
+++ b/builder/index.html
@@ -79,10 +79,8 @@
 
   <div class="supreme-selection global-container">
     <h2>Recruit your Supremes</h2>
-    <div data-bind="with: supremeFilter">
-      <select data-bind="options: origins, optionsText: 'origin_label', value: selectedOrigin,"></select>
-      <select data-bind="options: roles, optionsText: 'role_label', value: selectedRole,"></select>
-    </div>
+    <supremes-filter params="filter: supremeFilter"></supremes-filter>
+
     <div class="recruitment-list" data-bind="foreach: recruitableSupremes">
       <supreme-box params="supreme: $data"></supreme-box>
     </div>
@@ -190,5 +188,15 @@
   <!-- /ko -->
 
   <script src="js/vendor/require.min.js" data-main="js/main.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90560092-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
