Correction on the URL of gh-pages

--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
     <div class="global-container">
       <h1>Citizen Assemble !</h1>
       <h3>A Team-Builder for Pulp City</h3>
-      <h3>http://gulix.github.com/citizen-assemble/</h3>
-      <a href="http://gulix.github.com/citizen-assemble/">Go to Team Builder</a>
+      <h3>http://gulix.github.io/citizen-assemble/</h3>
+      <a href="http://gulix.github.io/citizen-assemble/">Go to Team Builder</a>
     </div>
   </div>
 
